src/kubernetes/proxy-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy-service
spec:
  replicas: 3  # Запустить 3 копии приложения
  selector:
    matchLabels:
      app: proxy-service
  template:
    metadata:
      labels:
        app: proxy-service
    spec:
      containers:
      - name: proxy-service
        image: ghcr.io/Egor-dgp/architecture-cinimaabyss/proxy-service:latest
        ports:
        - containerPort: 3000

apiVersion: v1
kind: Service
metadata:
  name: proxy-service
spec:
  selector:
    app: proxy-service  # Ищет Pod'ы с этой меткой
  ports:
  - port: 80       # Порт, на котором Service слушает
    targetPort: 3000  # Порт контейнера
  type: ClusterIP  # Тип Service (внутренний доступ)
